[package]
authors = ["Bastien Dejean <nihilhill@gmail.com>"]
name = "plato"
version = "0.9.16"
edition = "2018"

[[bin]]
name = "plato"
path = "src/main.rs"

[[bin]]
name = "plato-import"
path = "src/importer.rs"
required-features = ["importer"]

[[bin]]
name = "plato-emulator"
path = "src/emulator.rs"
required-features = ["emulator"]

[[bin]]
name = "article_fetcher"
path = "src/fetcher.rs"
required-features = ["fetcher"]

[[bin]]
name = "xkcd"
path = "src/xkcd.rs"
required-features = ["xkcd"]

[dependencies]
bitflags = "1.2.1"
downcast-rs = "1.2.0"
lazy_static = "1.4.0"
libc = "0.2.88"
png = "0.16.8"
regex = "1.4.3"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
titlecase = "1.1.0"
unicode-normalization = "0.1.17"
toml = "0.5.8"
zip = "0.5.11"
kl-hyphenate = "0.7.3"
entities = "1.0.1"
paragraph-breaker = "0.4.3"
xi-unicode = "0.3.0"
septem = "1.1.0"
byteorder = "1.4.2"
flate2 = "1.0.14"
levenshtein = "1.0.5"
nix = "0.20.0"
indexmap = { version = "1.6.2", features = ["serde-1"] }
anyhow = "1.0.38"
thiserror = "1.0.24"
walkdir = "2.3.1"
globset = "0.4.6"
filetime = "0.2.14"
fxhash = "0.2.1"
rand_core = "0.6.2"
rand_xoshiro = "0.6.0"
percent-encoding = "2.1.0"

[dependencies.getopts]
version = "0.2.21"
optional = true

[dependencies.reqwest]
version = "0.11.1"
features = ["rustls-tls", "json", "blocking"]
default-features = false
optional = true

[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dependencies.sdl2]
version = "0.34.3"
optional = true

[dependencies.signal-hook]
version = "0.3.6"
optional = true

[features]
importer = ["getopts"]
emulator = ["sdl2"]
fetcher = ["reqwest", "signal-hook"]
xkcd = ["reqwest", "signal-hook"]
