[package]
authors = ["Bastien Dejean <nihilhill@gmail.com>"]
name = "plato-core"
version = "0.9.43"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
bitflags = "2.5.0"
downcast-rs = "1.2.1"
lazy_static = "1.5.0"
libc = "0.2.155"
png = "0.17.13"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
titlecase = "3.2.0"
unicode-normalization = "0.1.23"
toml = "0.8.14"
zip = "2.1.3"
kl-hyphenate = "0.7.3"
entities = "1.0.1"
paragraph-breaker = "0.4.4"
xi-unicode = "0.3.0"
septem = "1.1.0"
byteorder = "1.5.0"
flate2 = "1.0.30"
levenshtein = "1.0.5"
nix = { version = "0.29.0", features = ["fs", "ioctl"] }
indexmap = { version = "2.2.6", features = ["serde"] }
anyhow = "1.0.86"
thiserror = "1.0.61"
walkdir = "2.5.0"
globset = "0.4.14"
fxhash = "0.2.1"
rand_core = "0.6.4"
rand_xoshiro = "0.6.0"
percent-encoding = "2.3.1"
chrono = { version = "0.4.34", features = ["serde", "clock"], default-features = false }
url = { version = "2.1.0" }
base64 = "0.21.4"
tokio = { version = "1.32.0", features = ["macros", "rt", "net", "sync"] }
rumqttc = { version = "0.24.0", features = ["use-rustls", "websocket", "url"] }
rand = "=0.8.5"
webpki-roots = "0.26.1"
coset = "0.3.6"
bytes = "^1.5"
chacha20poly1305 = "0.10.1"
hex = "0.4.3"
jxl-oxide = "0.8.0"
