[package]
authors = ["Bastien Dejean <nihilhill@gmail.com>"]
name = "plato-core"
version = "0.9.43"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
bitflags = "2.6.0"
downcast-rs = "1.2.1"
lazy_static = "1.5.0"
libc = "0.2.164"
png = "0.17.14"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
titlecase = "3.3.0"
unicode-normalization = "0.1.24"
toml = "0.8.19"
zip = "2.2.1"
kl-hyphenate = "0.7.3"
entities = "1.0.1"
paragraph-breaker = "0.4.4"
xi-unicode = "0.3.0"
septem = "1.1.0"
byteorder = "1.5.0"
flate2 = "1.0.35"
levenshtein = "1.0.5"
nix = { version = "0.29.0", features = ["fs", "ioctl"] }
indexmap = { version = "2.6.0", features = ["serde"] }
anyhow = "1.0.93"
thiserror = "2.0.3"
walkdir = "2.5.0"
globset = "0.4.15"
fxhash = "0.2.1"
rand_core = "0.6.4"
rand_xoshiro = "0.6.0"
percent-encoding = "2.3.1"
chrono = { version = "0.4.38", features = ["serde", "clock"], default-features = false }
