[package]
authors = ["Bastien Dejean <nihilhill@gmail.com>"]
name = "plato-core"
version = "0.9.44"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
bitflags = "2.10.0"
downcast-rs = "2.0.2"
lazy_static = "1.5.0"
libc = "0.2.180"
png = "0.18.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
titlecase = "3.6.0"
unicode-normalization = "0.1.25"
toml = "0.9.11"
zip = "7.0.0"
kl-hyphenate = "0.7.3"
entities = "1.0.1"
paragraph-breaker = "0.4.4"
xi-unicode = "0.3.0"
septem = "1.1.0"
byteorder = "1.5.0"
flate2 = "1.1.5"
levenshtein = "1.0.5"
nix = { version = "0.30.1", features = ["fs", "ioctl"] }
indexmap = { version = "2.13.0", features = ["serde"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
walkdir = "2.5.0"
globset = "0.4.18"
fxhash = "0.2.1"
rand_core = "0.9.3"
rand_xoshiro = "0.7.0"
percent-encoding = "2.3.2"
chrono = { version = "0.4.42", features = ["serde", "clock"], default-features = false }
