[package]
authors = ["Bastien Dejean <nihilhill@gmail.com>"]
name = "emulator"
version = "0.9.34"
edition = "2021"

[[bin]]
name = "plato-emulator"
path = "src/main.rs"

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
plato-core = { path = "../core" }
sdl2 = "0.35.2"


[features]
default = ["chess"]
chess = ["plato-core/chess"]
