[package]
authors = ["Bastien Dejean <nihilhill@gmail.com>"]
name = "fetcher"
version = "0.9.41"
edition = "2021"

[[bin]]
name = "article_fetcher"
path = "src/main.rs"

[dependencies]
plato-core = { path = "../core" }
signal-hook = "0.3.17"

[dependencies.reqwest]
version = "0.11.24"
features = ["rustls-tls", "json", "blocking"]
default-features = false
