[package]
authors = ["Bastien Dejean <nihilhill@gmail.com>"]
name = "fetcher"
version = "0.9.44"
edition = "2021"

[[bin]]
name = "article_fetcher"
path = "src/main.rs"

[dependencies]
plato-core = { path = "../core" }
signal-hook = "0.3.17"

[dependencies.reqwest]
version = "0.12.9"
features = ["rustls-tls", "json", "blocking"]
default-features = false
